--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ html {
   font-size: 16px; }
 
 body {
-  background: transparent;
+  background: #e7e7e7;
   position: relative;
   /* height: 100vh; */
   line-height: 0; }
@@ -185,7 +185,7 @@ header {
   background-size: cover;
   width: 100%;
   height: 445px; }
-  @media (max-width: 576px) {
+  @media (max-width: 506px) {
     .header-figures {
       height: 250px; } }
 
@@ -196,8 +196,9 @@ header {
   margin: auto;
   height: 100px;
   padding: 20px 30px 0 30px;
-  margin-bottom: 20px; }
-  @media (max-width: 576px) {
+  margin-bottom: 10px;
+  margin-top: 10px; }
+  @media (max-width: 506px) {
     .hello-form {
       padding-top: 20px;
       margin-bottom: 15px;
@@ -208,7 +209,7 @@ header {
     font-weight: 300;
     color: #4e4e4e;
     margin: 0 0 20px 0; }
-    @media (max-width: 576px) {
+    @media (max-width: 506px) {
       .hello-form .hello-form--punchline {
         font-size: 2em;
         padding: 0 16px;
@@ -226,7 +227,7 @@ header {
         width: 100%; }
       .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box.hidden {
         display: none; }
-      @media (max-width: 576px) {
+      @media (max-width: 506px) {
         .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box.margin-negative-top {
           margin-top: -15px; } }
       .hello-form .hello-form--filters-wrapper .hello-form--filters-wrapper--box .mdl-textfield {
@@ -241,13 +242,12 @@ header {
   overflow: auto; }
   @media (max-width: 768px) {
     .grid {
-      max-width: 97%;
-      padding-bottom: 50px; } }
-  @media (max-width: 576px) {
+      max-width: 97%; } }
+  @media (max-width: 506px) {
     .grid {
       max-width: 95%; } }
   .grid div.event {
-    width: 31.33332%;
+    width: 48%;
     margin-right: 1%;
     margin-left: 1%;
     float: lefT;
@@ -260,7 +260,7 @@ header {
     @media (max-width: 768px) {
       .grid div.event {
         width: 48%; } }
-    @media (max-width: 576px) {
+    @media (max-width: 506px) {
       .grid div.event {
         margin-right: 0;
         margin-left: 0;
@@ -272,10 +272,10 @@ header {
   position: relative;
   overflow: visible !important;
   background: #f5f5f5 !important; }
-  @media (max-width: 576px) {
+  @media (max-width: 506px) {
     .card {
       display: block !important;
-      height: 154px;
+      height: 100px;
       min-height: 0 !important; } }
   .card .card-header {
     color: #fff;
@@ -288,7 +288,7 @@ header {
       opacity: 0.8;
       cursor: pointer;
       transition: .5s; }
-    @media (max-width: 576px) {
+    @media (max-width: 506px) {
       .card .card-header {
         width: 130px;
         height: 100px;
@@ -309,7 +309,7 @@ header {
     .card .card-chip.premium-is-0 {
       display: none;
       visibility: hidden; }
-    @media (max-width: 576px) {
+    @media (max-width: 506px) {
       .card .card-chip {
         left: 0;
         right: auto;
@@ -321,7 +321,7 @@ header {
       font-size: 10px;
       color: white;
       line-height: 34px; }
-      @media (max-width: 576px) {
+      @media (max-width: 506px) {
         .card .card-chip .card-chip__text {
           vertical-align: baseline;
           line-height: 24px;
@@ -334,7 +334,7 @@ header {
     width: 100%;
     background: rgba(0, 0, 0, 0.35);
     padding: 16px; }
-    @media (max-width: 576px) {
+    @media (max-width: 506px) {
       .card .card-overlay {
         display: none; } }
   .card .card-meta {
@@ -345,7 +345,7 @@ header {
     font-size: 14px;
     margin-bottom: 6px;
     font-family: Roboto; }
-    @media (max-width: 576px) {
+    @media (max-width: 506px) {
       .card .card-meta {
         font-size: 12px; } }
     .card .card-meta .card-meta--tag {
@@ -353,7 +353,7 @@ header {
   .card .card-social {
     float: left;
     margin-right: 8px; }
-    @media (max-width: 576px) {
+    @media (max-width: 506px) {
       .card .card-social {
         margin: 0;
         margin-right: -6px; } }
@@ -371,19 +371,22 @@ header {
     display: none;
     padding: 4px 0;
     text-align: left; }
-    @media (max-width: 576px) {
+    .card .mdl-card__title.card-title-mobile h4 {
+      font-family: "Roboto","Helvetica","Arial",sans-serif !important;
+      font-size: 18px; }
+    @media (max-width: 506px) {
       .card .mdl-card__title.card-title-mobile {
         display: block; } }
   .card .card-desc {
     color: #4e4e4e !important;
     width: 100% !important;
     height: 70px; }
-    @media (max-width: 576px) {
+    @media (max-width: 506px) {
       .card .card-desc {
         width: calc(100% - 130px) !important;
         padding: 16px;
         height: 100px; } }
-    @media (max-width: 576px) {
+    @media (max-width: 506px) {
       .card .card-desc .desc-txt {
         display: none; } }
   .card .card-lieu {
@@ -402,7 +405,7 @@ header {
     font-family: Roboto;
     overflow: visible !important;
     padding: 8px 16px; }
-    @media (max-width: 576px) {
+    @media (max-width: 506px) {
       .card .card-footer {
         padding: 7px 16px; } }
     .card .card-footer .nav-menu {
@@ -417,34 +420,33 @@ header {
 .mdl-card__menu .mdl-button {
   color: white; }
 
-.mdl-card__actions .mdl-button {
-  color: white;
-  font-weight: 400; }
-  @media (max-width: 992px) {
-    .mdl-card__actions .mdl-button {
-      padding: 0 11px; } }
-  @media (max-width: 768px) {
-    .mdl-card__actions .mdl-button {
-      padding: 0 16px; } }
+.mdl-card__actions {
+  display: none; }
+  .mdl-card__actions .mdl-button {
+    color: white;
+    font-weight: 400; }
+    @media (max-width: 992px) {
+      .mdl-card__actions .mdl-button {
+        padding: 0 11px; } }
+    @media (max-width: 768px) {
+      .mdl-card__actions .mdl-button {
+        padding: 0 16px; } }
+  .mdl-card__actions .lt-button {
+    color: #b80021 !important; }
+  .mdl-card__actions .li-button {
+    color: #0077b5 !important;
+    padding: 0 10px;
+    font-size: 18px;
+    min-width: 10px;
+    transform: translateY(-1px); }
+  .mdl-card__actions .tw-button {
+    color: #00a7f8 !important;
+    padding: 0 10px;
+    font-size: 18px;
+    min-width: 10px;
+    transform: translate(-10px, 0); }
 
-.mdl-card__actions .lt-button {
-  color: #e36943 !important; }
-
-.mdl-card__actions .li-button {
-  color: #0077b5 !important;
-  padding: 0 10px;
-  font-size: 18px;
-  min-width: 10px;
-  transform: translateY(-1px); }
-
-.mdl-card__actions .tw-button {
-  color: #00a7f8 !important;
-  padding: 0 10px;
-  font-size: 18px;
-  min-width: 10px;
-  transform: translate(-10px, 0); }
-
-@media (max-width: 576px) {
+@media (max-width: 506px) {
   .share-menu {
     display: none; } }
 
@@ -516,7 +518,7 @@ footer {
         footer .footer-top .newsletter .newsletter--body button {
           left: 50%;
           transform: translateX(-50%);
-          background: #e36943 !important; }
+          background: #930025 !important; }
     footer .footer-top .promo {
       float: right;
       width: 49%;
@@ -615,15 +617,15 @@ footer {
 
 @keyframes colors {
   0% {
-    stroke: #e36943; }
+    stroke: #930025; }
   25% {
-    stroke: #e36943; }
+    stroke: #930025; }
   50% {
-    stroke: #e36943; }
+    stroke: #930025; }
   75% {
-    stroke: #e36943; }
+    stroke: #930025; }
   100% {
-    stroke: #e36943; } }
+    stroke: #930025; } }
 
 @keyframes dash {
   0% {
@@ -643,13 +645,12 @@ footer {
       padding: 15px 0 30px 0; } }
   @media (max-width: 768px) {
     .mixitup-page-list.is-pinned {
-      position: fixed;
-      /* top: 0; */
+      /*position: fixed;
       bottom: 0;
       z-index: 10;
       background: white;
       width: 100%;
-      padding: 0; } }
+      padding: 0;*/ } }
   .mixitup-page-list.mixitup-page-list-disabled {
     display: none; }
   .mixitup-page-list button {
@@ -666,7 +667,7 @@ footer {
       background: gainsboro !important;
       box-shadow: none !important; }
     .mixitup-page-list button.mixitup-control-active {
-      background: #e36943 !important;
+      background: #930025 !important;
       color: white; }
 
 .error-message {
@@ -676,9 +677,9 @@ footer {
   text-align: center;
   padding: 30px 0 30px 0;
   margin-bottom: 50px;
-  background: #f7d3c8; }
+  background: #ffb8c5; }
   .error-message .reset-filters {
-    background: #e36943 !important; }
+    background: #930025 !important; }
     .error-message .reset-filters i {
       margin-top: -2px; }
 
@@ -688,6 +689,6 @@ footer {
   visibility: hidden !important; }
 
 .mdl-button--colored {
-  color: #e36943 !important; }
+  color: #930025 !important; }
 
 /*# sourceMappingURL=main.css.map */
