--- a/assets/scss/_base.css
+++ b/assets/scss/_base.css
@@ -5,7 +5,7 @@ html {
   font-size: 16px; }
 
 body {
-  background: transparent;
+  background: #e7e7e7;
   position: relative;
   /* height: 100vh; */
   line-height: 0; }
