--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -11,7 +11,7 @@
 
     @include breakpoint(md) {
        max-width: 97%;
-       padding-bottom: 50px
+       // padding-bottom: 50px
     }
 
     @include breakpoint(sm) {
@@ -20,7 +20,7 @@
 
     div.event
     {
-      width: 31.33332%;
+      width: 48%;
       margin-right: 1%;
       margin-left: 1%;
       float: lefT;
@@ -57,7 +57,7 @@
 
   @include breakpoint(sm) {
     display: block !important;
-    height: 154px;
+    height: 100px;
     min-height: 0!important;
   }
 
@@ -149,7 +149,7 @@
         //font-weight: 900;
         font-family: Roboto;
 
-        
+
         @include breakpoint(sm) {
           font-size: 12px;
         }
@@ -190,6 +190,11 @@
       display: none;
       padding: 4px 0;
       text-align: left;
+
+      h4 {
+        font-family: "Roboto","Helvetica","Arial",sans-serif !important;
+        font-size: 18px;
+      }
 
       @include breakpoint(sm) {
         display: block;
@@ -242,7 +247,7 @@
       padding: 7px 16px;
     }
 
-    
+
 
     .nav-menu
     {
@@ -259,7 +264,7 @@
 }
 
 // .mdl-card__menu
-// { 
+// {
 //   position: static !important;
 // }
 
@@ -272,6 +277,8 @@
 
 .mdl-card__actions
 {
+  display: none; // pas dans embed
+
   .mdl-button
   {
     color: white;
@@ -292,7 +299,7 @@
   .lt-button
   {
     //background: #e36943;
-    color: #e36943 !important;
+    color: #b80021 !important;
 
     &:hover
     {
@@ -311,7 +318,7 @@
     padding: 0 10px;
     font-size: 18px;
     min-width: 10px;
-    transform: translateY(-1px); 
+    transform: translateY(-1px);
 
     &:hover
     {
