--- a/index.html.twig
+++ b/index.html.twig
@@ -50,7 +50,7 @@
 			{{#each post}}
 					<div class="event {{id}} {{genre}} {{sector}} {{canton}}" data-title="{{slug}}" data-name="{{name}}">
 
-						<div class="card card-wide mdl-card mdl-shadow--2dp" card-url="{{storylink}}">
+						<div class="card card-wide mdl-card" card-url="{{storylink}}">
 							<a href="{{storylink}}" target="_blank">
 
 
