--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -73,11 +73,12 @@ html
 
 body
 {
-  background:rgb(231, 231, 231);
-  // background: transparent;
+  background: transparent;
   position: relative;
   /* height: 100vh; */
   line-height: 0;
+  max-width: 960px;
+  margin: auto !important;
 }
 
 img
