--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -20,7 +20,7 @@
 
     div.event
     {
-      width: 48%;
+      width: 31.33332%;
       margin-right: 1%;
       margin-left: 1%;
       float: lefT;
@@ -35,7 +35,7 @@
       }*/
 
       @include breakpoint(md) {
-        width: 48%;
+        // width: 48%;
       }
 
       @include breakpoint(sm) {
